2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/Makefile.am:
	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/flv/vp6.py: Add a VP6 encoder
	component.

2007-03-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.py:
	  We verified that lame and mp3parse handle timestamp disconts,
	  and we fixed audioresample to handle them, and we tested
	  with dropping repeaters that stuff stays in sync.
	  So we remove audiorate again.

2007-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/muxers/flv/flv.py:
	  check timestamps/offsets

2007-02-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.py:
	  Remove unneeded if statement.
	  Add audiorate, to compensate for lame's inability to deal with
	  dropped audio frames until lame gets fixed.
	  Tested with flumotion-launch audiotest-producer ! mp3-encoder !
	  flv-muxer ! disk-consumer directory=. rotate-type=none
	  to verify that it negotiates correctly.

2007-02-09  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* env:
	  Added new required file

	* flumotion/test/setup.py:
	  Removed generated file from svn

=== release 0.4.0 ===

2007-02-09  Michael Smith  <msmith@fluendo.com>

	* configure.ac:
	  Release 0.4.0

2007-02-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/test/Makefile.am:
	* misc/Makefile.am:
	  Cargo-cult some more autotools magic to make setup.py work right.

=== release 0.2.0 ===

2007-02-06  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/muxers/flv/flv.py:
	  Change FLV muxer to use MultiInputParseLaunchComponent, so this
	  isn't deadlock-prone.

2007-01-05  Julien MOUTTE  <julien@moutte.net>

	* flumotion-flash.spec.in: Remove noarch from spec.
