@@ -31,7 +31,7 @@
       </entries>
 
       <properties>
-        <property name="config" type="string" />
+        <property name="encoder-state" type="string" />
       </properties>
 
     </component>
